Bug 214854 - State in error message from server to which mail account it belongs to. r=Neil, ui-r=bwinton